show and change images

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <link rel="stylesheet" href="./src/style.scss">
 </head>
 <body>
-    <div class="index-container">
+    <div class="index index-container">
         <header class="index-header">
             <h1 class="index-header-title">Which one is your favorite?</h1>
         </header>
-        <section class="index-main">
-            <div class="index-main-left"></div>
-            <div class="index-main-right"></div>
+        <section class="index-main js-index-main">
+            <div class="index-main-left js-image-container-left"></div>
+            <div class="index-main-right js-image-container-right"></div>
         </section>
         <footer class="index-footer">
             <a href="result.html" class="index-footer-link">Show the results</a>
         </footer>
     </div>
+    <script type="module" src="script/main.js"></script>
 </body>
 </html>
